# hw06-wendykimm

./: Makefile  README.html  _toc.yml  environment.yml  genindex.html  index.html  index.ipynb  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle
_build/.doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
_build/html/_sources/: README.md
_build/jupyter_execute/: index.ipynb  index.py
_sources/: index.ipynb
data/: GW150914_data.csv
ligotools/: readligo.py  utils.py
ligotools/tests/: tests_readligo.py
